bug 346318 - Stop fading out popups on 10.4+ so datepicker works. r=joshaas,mento